GNOME Bugzilla – Bug 745070
indexing-notification: Crash caused by miners-changed emission after main window is destroyed
Last modified: 2015-02-25 08:46:12 UTC
If you close the main window soon after launching the application, you get a crash like this: Program received signal SIGSEGV, Segmentation fault. g_type_check_instance_cast (type_instance=0xaaaaaaaaaaaaaaaa, iface_type=9933376) at gtype.c:4055 4055 if (type_instance->g_class) (gdb) bt
+ Trace 234705
Created attachment 297741 [details] [review] indexing-notification: Fix the lifetime of the miners-changed handler