indexing-notification: Fix the lifetime of the miners-changed handler

PhotosApplication outlives the notification widget because the window
is destroyed before the application. Therefore we should disconnect
from the miners-changed signal when the widget is destroyed.

https://bugzilla.gnome.org/show_bug.cgi?id=745070